<resources>
    <string name="app_name">SpaceX Fan</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="rockets_fragment_label">SpaceX Rockets</string>
    <string name="favorites_fragment_label">Favorite Rockets</string>
    <string name="launches_fragment_label">Upcoming Launches</string>
    <string name="detail_fragment_label">Detail</string>
    <string name="launch_fragment_label">Launch</string>
    <string name="authorization_fragment_label">Authorization</string>

    <!--    Strings used for bottom navigation-->
    <string name="rockets">Rockets</string>
    <string name="favorites">Favorites</string>
    <string name="launches">Launches</string>
    <string name="try_again">Try again</string>
    <string name="error">Error</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="mass">Mass</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="cancel">cancel</string>
    <string name="biometric_hardware_is_unavailable">Biometric hardware is unavailable</string>
    <string name="no_biometric_hardware">No biometric hardware</string>
    <string name="biometric_none_enrolled">Biometric none enrolled</string>
    <string name="you_have_no_rockets_added_to_favorites_list">You have no rockets added to favorites list</string>
    <string name="explore">Explore</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="invalid_email_address">Invalid email address</string>

</resources>